swen430as1/tests/valid/real/Real_Valid_08.while
void main() {
    real x = 1;
    //
    assert x == 1.0;
}
