swen430as1/tests/invalid/real/Real_Invalid_01.while
void main() {
    assert 1.0.0 == 1.0;
}
